--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "fliptheshow",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.13",
-    "tailwindcss": "^2.1.2"
-  }
+	"name": "fliptheshow",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 5000",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"next": "10.2.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.2.5",
+		"postcss": "^8.2.13",
+		"tailwindcss": "^2.1.2"
+	}
 }
