--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev -p 5000",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
 	},
 	"dependencies": {
 		"next": "10.2.0",
