--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
 	"scripts": {
 		"dev": "next dev -p 5000",
 		"build": "next build",
-		"start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
+		"start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+		"postbuild": "next-sitemap --config sitemap.js"
 	},
 	"dependencies": {
 		"next": "10.2.0",
+		"next-sitemap": "^1.6.49",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
 	},
