--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"next": "10.2.0",
 		"next-sitemap": "^1.6.49",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"react-paginate": "^7.1.2"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.2.5",
