--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"postbuild": "next-sitemap --config sitemap.js"
 	},
 	"dependencies": {
+		"@formspree/react": "^2.2.3",
 		"next": "10.2.0",
 		"next-sitemap": "^1.6.49",
 		"react": "17.0.2",
