--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
 		"postbuild": "next-sitemap --config sitemap.js"
 	},
 	"dependencies": {
-		"@formspree/react": "^2.2.3",
+		"@formspree/react": "^2.2.4",
+		"caniuse-lite": "^1.0.30001271",
 		"next": "10.2.0",
-		"next-sitemap": "^1.6.49",
+		"next-sitemap": "^1.6.192",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-paginate": "^7.1.2"
+		"react-paginate": "^7.1.3"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.2.5",
-		"postcss": "^8.2.14",
-		"tailwindcss": "^2.1.2"
+		"autoprefixer": "^10.3.7",
+		"postcss": "^8.3.11",
+		"tailwindcss": "^2.2.17"
 	}
 }
