--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@formspree/react": "^2.2.4",
 		"caniuse-lite": "^1.0.30001271",
 		"next": "10.2.0",
+		"next-seo": "^5.4.0",
 		"next-sitemap": "^1.6.192",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
