--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
 	},
 	"dependencies": {
 		"@formspree/react": "^2.2.4",
-		"caniuse-lite": "^1.0.30001271",
-		"next": "10.2.0",
+		"caniuse-lite": "^1.0.30001332",
+		"next": "^12.1.5",
 		"next-seo": "^5.4.0",
-		"next-sitemap": "^1.6.192",
+		"next-sitemap": "^1.9.12",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-paginate": "^7.1.3"
+		"react-paginate": "^7.1.5"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.3.7",
-		"postcss": "^8.3.11",
-		"tailwindcss": "^2.2.17"
+		"autoprefixer": "^10.4.5",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^2.2.19"
 	}
 }
