--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@formspree/react": "^2.2.4",
+		"@heroicons/react": "^1.0.6",
 		"caniuse-lite": "^1.0.30001332",
 		"next": "^12.1.5",
 		"next-seo": "^5.4.0",
