--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"next-sitemap": "^1.9.12",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-paginate": "^7.1.5"
+		"react-paginate": "^7.1.5",
+		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.5",
