--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 		"postbuild": "next-sitemap --config sitemap.js"
 	},
 	"dependencies": {
-		"@formspree/react": "^2.2.4",
+		"@formspree/react": "^2.2.5",
 		"@heroicons/react": "^1.0.6",
-		"caniuse-lite": "^1.0.30001332",
+		"caniuse-lite": "^1.0.30001338",
 		"cors": "^2.8.5",
-		"next": "^12.1.5",
+		"next": "^12.1.6",
 		"next-seo": "^5.4.0",
 		"next-sitemap": "^1.9.12",
 		"react": "17.0.2",
@@ -22,8 +22,10 @@
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.4.5",
-		"postcss": "^8.4.12",
-		"tailwindcss": "^2.2.19"
+		"@tailwindcss/forms": "^0.5.1",
+		"@tailwindcss/typography": "^0.5.2",
+		"autoprefixer": "^10.4.7",
+		"postcss": "^8.4.13",
+		"tailwindcss": "^3.0.24"
 	}
 }
