--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.5.1",
 		"@tailwindcss/typography": "^0.5.2",
 		"autoprefixer": "^10.4.7",
