--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"postbuild": "next-sitemap --config sitemap.js"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
 		"@formspree/react": "^2.2.5",
 		"@heroicons/react": "^1.0.6",
 		"caniuse-lite": "^1.0.30001338",
@@ -22,6 +24,7 @@
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
+		"@emotion/babel-plugin": "^11.9.2",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.5.1",
 		"@tailwindcss/typography": "^0.5.2",
